added work flow dump and sha finan dashboard